# orca_core

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASING.md  TRADEMARK.md  countdown_replay_sequence_20250515_225400.yaml  crawl_replay_sequence_20250504_230315.yaml  kap_replay_sequence_20250508_135409.yaml  kapangi_left_replay_sequence_20250523_000007.yaml  main.py  mkdocs.yml  open_replay_sequence_20250518_160801.yaml  pyproject.toml  ret_demo.py  test.py  zero_replay_sequence_20250525_215319.yaml
.github/: CODEOWNERS
core/: core.py  orca_config.yaml
demo/: kapangi_replay_sequence_20250504_002233.yaml
docs/: auto_docs_instructions.md  convert_griffe_to_md.py  how_to_docs.md  index.md  requirements.txt
docs_non_auto/: convert_griffe_to_md.py  orca_core_api.json  orca_core_core_api.mdx
orca_core/: __init__.py  base_hand.py  calibration.py  calibration_joint_encoder.py  cli.py  constants.py  core.py  demo_presets.py  drivers.py  hand_config.py  hand_spec.py  hardware_hand.py  hardware_hand_joint_feedback.py  joint_position.py  load_configuration.py  profile.py  retargeter.py  save_configurations.py  state.py  telemetry.py  tensioning.py  test.py  test_calibrate.py  test_hand.py  test_mock.py  version.py
replay_sequences/: countdown2_replay_sequence_20250515_225708.yaml  curl_big_left_replay_sequence_20250526_233451.yaml  kpa2_replay_sequence_20250508_140155.yaml  open2_replay_sequence_20250518_161915.yaml  temp_replay_sequence_20250829_062514.yaml  tt_replay_sequence_20250831_170414.yaml
scripts/: bridge.py  calibrate.py  calibrate_manual.py  check_motor.py  check_wrist.py  common.py  configure_motor_chain.py  curl_extend_ring.py  dashboard.py  debug_overload.py  demo_dof.py  demo_dof_lite.py  enable_wrist_lite.py  example_tactile.py  jitter.py  joint_loop_bringup.py  main_demo.py  main_demo_abduction.py  neutral.py  overload_demo.py  overload_test.py  plot_motor_temps.py  plot_motor_temps_cont.py  reactive_grip.py  record.py  record_angles.py  record_continuous.py  record_waypoints.py  remote_control.py  replay.py  replay_angles.py  replay_continuous.py  replay_waypoints.py  retarget_avp.py  ring_open_close.py  scan_motors.py  setup.py  slider.py  slider_joint.py  slider_joint_feedback.py  (+18 more)
test/: test2.py
tests/: _encoder_helpers.py  _hand_feedback_helpers.py  _loop_helpers.py  _tactile_helpers.py  base_test.py  conftest.py  (+34 more)
(+122 files in other folders)
