[project]
name = "orca_core"
version = "0.2.1"
description = "Core Python Controller of the ORCA Hand. Handles all hardware interaction, logic and abstracts control. Provides API for basic functionality and info of the hand."
authors = [
    {name = "clemens-chr", email = "cchristoph@student.ethz.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynamixel-sdk (>=3.7.31,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "numpy (>=2.2.6,<3.0.0)",
]

[project.optional-dependencies]
sensing-ui = [
    "flask>=3.0.0,<4.0.0",
    "flask-socketio>=5.6.0,<6.0.0",
    "pyserial>=3.5,<4.0.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.1,<4.0.0",
    "pytest>=8.3.5,<9.0.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.2",
    "mkdocs-awesome-pages-plugin==2.10.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.5.0",
    "mkdocs-material-extensions==1.3.1",
    "mkdocstrings==0.29.1",
    "mkdocstrings-python==1.16.12",
    "pymdown-extensions==10.8.1",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orca_core"]
